--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,74 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  padding: 24px;
+}
+
+custom-height {
+  height: calc(100vh - 48px);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: "#1E1E29";
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: "#BFBFD4";
+}
+
+@media (max-width: 768px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+#loading-spinner {
+    display: inline-block;
+
+    width: 34px;
+    height: 34px;
+
+    border: 4px solid rgba(255, 255, 255, .3);
+    border-radius: 50%;
+    border-top-color: var(--blue-light);
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+  
+  @-webkit-keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+
+.input #loading-spinner {
+  position: absolute;
+  right: 16px;
+}
+
+.select-list button:not(:last-child) {
+    border-bottom: 1px solid '#1E1E29';
+}
+
+.next-day-item h2::first-letter,
+  h3::first-letter {
+    text-transform: uppercase;
+  }
